fixed text bubble spacing and border radius

--- a/css/index.css
+++ b/css/index.css
@@ -113,11 +113,11 @@
   .chat-left {
     color: hsl(276, 55%, 52%);
     font-size: .6rem;
-    width: 50%;
+    width: 55%;
     margin: .25rem 0rem .25rem .75rem;
     background-color: hsl(270, 19%, 89%);
-    border-radius: 40px;
-    padding: .5rem .5rem;
+    border-radius: 20px;
+    padding: .5rem .5rem .5rem .75rem;
     clear: both;
   }
 
@@ -145,16 +145,20 @@
     width: 75%;
     margin: .35rem 0rem 0rem 0rem;
     background-color: hsl(270, 19%, 89%);
-    border-radius: 40px;
+    border-radius: 20px;
     padding: .5rem .5rem;
     float: right;
   }
 
+  .message1-right {
+    padding-left: .9rem;
+  }
+
   .message2-right {
     text-align: right;
-    margin-right: 1rem;
-    margin-top: 0%;
+    margin-top: 2%;
     width: max-content;
+ 
   }
   .last-right-message {
     margin-bottom: 1rem;
